--- a/about.html
+++ b/about.html
@@ -19,7 +19,6 @@
                 <a href="about.html" class="nav-link active">About</a>
                 <a href="music.html" class="nav-link">Music</a>
                 <a href="merch.html" class="nav-link">Merch</a>
-                <a href="contact.html" class="nav-link">Contact</a>
                 <a href="press.html" class="nav-link">Press</a>
             </div>
             <div class="nav-toggle" id="nav-toggle">
@@ -37,21 +36,32 @@
             </div>
         </section>
 
-        <section class="about-content">
-            <div class="container">
-                <div class="about-grid">
-                    <div class="about-text">
-                        <div class="bio">
-                            <p>REBELLE is a radio-playing disco/dance-pop artist known for her powerhouse vocals, glam-pop flair, and high-energy live shows. Originally from Croatia and now based in Los Angeles, she holds a Bachelor of Music in Vocal Performance and is a dynamic force in the LA music scene — performing both as a solo artist and lead vocalist in several high-profile tribute bands. Her original songs have aired on major radio stations, and she's written and placed jingles for national airplay. Rebelle has worked with Grammy-nominated musicians and industry veterans, and is a Recording Academy's Grammy U member herself. She recently headlined an international mini-tour for her single Taboo. With three singles out and a debut album in the works, Rebelle delivers bold, empowering anthems that bring disco into the now — and straight onto your playlist.</p>
+            <section>
+                <div class="about-card">
+                    <div class="card-content">
+                        <div class="card-text">
+                            <p>REBELLE is a radio-playing disco/dance-pop artist known for her powerhouse vocals, glam-pop flair, and high-energy live shows. Originally from Croatia and now based in Los Angeles, she holds a Bachelor of Music in Vocal Performance and is a dynamic force in the LA music scene — performing both as a solo artist and lead vocalist in several high-profile tribute bands.</p>
+                        </div>
+                        <div class="card-image">
+                            <img src="assets/about.jpg" alt="REBELLE graduate">
                         </div>
                     </div>
-                    <div class="about-images">
-                        <img src="https://via.placeholder.com/400x500/FF69B4/FFFFFF?text=REBELLE+1" alt="REBELLE Photo 1">
-                        <img src="https://via.placeholder.com/400x500/FFB6C1/FFFFFF?text=REBELLE+2" alt="REBELLE Photo 2">
-                        <img src="https://via.placeholder.com/400x500/FFC0CB/FFFFFF?text=REBELLE+3" alt="REBELLE Photo 3">
+                </div>
+                
+                <div class="about-card">
+                    <div class="card-content">
+                        <div class="card-text">
+                            <p>Her original songs have aired on major radio stations, and she's written and placed jingles for national airplay. Rebelle has worked with Grammy-nominated musicians and industry veterans, and is a Recording Academy's Grammy U member herself. She recently headlined an international mini-tour for her single Taboo. With three singles out and a debut album in the works, Rebelle delivers bold, empowering anthems that bring disco into the now — and straight onto your playlist.</p>
+                        </div>
+                        <div class="card-image">
+                            <img src="assets/about1.jpg" alt="REBELLE performing">
+                        </div>
                     </div>
                 </div>
+            </section>
 
+        <section class="about-content">
+            <div class="container">
                 <div class="services">
                     <h2>Services</h2>
                     <div class="services-grid">
@@ -59,22 +69,25 @@
                             <h3>Live Performance Booking</h3>
                             <ul>
                                 <li>Solo artist shows and performances</li>
-                                <li>Tribute band gigs (e.g., Johnny Cash tribute)</li>
-                                <li>Private/corporate events and festivals</li>
+                                <li>Booking for tribute band performances (e.g., Johnny Cash tribute)</li>
+                                <li>Private events, parties, corporate gigs, and festivals</li>
                             </ul>
                         </div>
                         <div class="service-item">
                             <h3>Songwriting & Composition</h3>
                             <ul>
-                                <li>Custom music for commercials, films</li>
-                                <li>Co-writing and demo recordings</li>
+                                <li>Custom music for artist, commercials, films, or short films</li>
+                                <li>Co-writing collaborations</li>
+                                <li>Jingle and commercial music writing</li>
+                                <li>Demo vocal recordings for songwriters or producers</li>
                             </ul>
                         </div>
                         <div class="service-item">
                             <h3>Session Vocals</h3>
                             <ul>
                                 <li>Classical, pop, commercial, background vocals</li>
-                                <li>Studio work, remote sessions</li>
+                                <li>Studio session singing for recordings, jingles, commercials, films, and TV</li>
+                                <li>Remote/session work with producers and songwriters</li>
                             </ul>
                         </div>
                         <div class="service-item">
@@ -96,8 +109,9 @@
         <div class="footer-content">
             <div class="footer-info">
                 <h3>REBELLE | B.M.</h3>
-                <p>Singer • Songwriter • Studio Assistant • Session Singer</p>
-                <p>info.rebellemusic@gmail.com | (626) 628-6024</p>
+                <p>Singer • Songwriter • Performer • B.M.</p>
+                <p>info.rebellemusic@gmail.com</p>
+                <p>(626) 628-6024</p>
                 <p>Based in Los Angeles, CA</p>
             </div>
             <div class="footer-social">
