--- a/merch.html
+++ b/merch.html
@@ -19,7 +19,6 @@
                 <a href="about.html" class="nav-link">About</a>
                 <a href="music.html" class="nav-link">Music</a>
                 <a href="merch.html" class="nav-link active">Merch</a>
-                <a href="contact.html" class="nav-link">Contact</a>
                 <a href="press.html" class="nav-link">Press</a>
             </div>
             <div class="nav-toggle" id="nav-toggle">
@@ -57,8 +56,9 @@
         <div class="footer-content">
             <div class="footer-info">
                 <h3>REBELLE | B.M.</h3>
-                <p>Singer • Songwriter • Studio Assistant • Session Singer</p>
-                <p>info.rebellemusic@gmail.com | (626) 628-6024</p>
+                <p>Singer • Songwriter • Performer • B.M.</p>
+                <p>info.rebellemusic@gmail.com</p>
+                <p>(626) 628-6024</p>
                 <p>Based in Los Angeles, CA</p>
             </div>
             <div class="footer-social">
