--- a/contact.html
+++ b/contact.html
@@ -84,8 +84,9 @@
         <div class="footer-content">
             <div class="footer-info">
                 <h3>REBELLE | B.M.</h3>
-                <p>Singer • Songwriter • Studio Assistant • Session Singer</p>
-                <p>info.rebellemusic@gmail.com | (626) 628-6024</p>
+                <p>Singer • Songwriter • Performer • B.M.</p>
+                <p>info.rebellemusic@gmail.com</p>
+                <p>(626) 628-6024</p>
                 <p>Based in Los Angeles, CA</p>
             </div>
             <div class="footer-social">
