--- a/music.html
+++ b/music.html
@@ -19,7 +19,6 @@
                 <a href="about.html" class="nav-link">About</a>
                 <a href="music.html" class="nav-link active">Music</a>
                 <a href="merch.html" class="nav-link">Merch</a>
-                <a href="contact.html" class="nav-link">Contact</a>
                 <a href="press.html" class="nav-link">Press</a>
             </div>
             <div class="nav-toggle" id="nav-toggle">
@@ -68,7 +67,7 @@
                         </div>
                         <div class="project-item">
                             <h3>Jingle Placements</h3>
-                            <p>Radio 1 (Croatia)</p>
+                            <p>Wrote and placed jingles on the Croatian regional radio station, Radio 1</p>
                         </div>
                     </div>
                 </div>
@@ -80,8 +79,9 @@
         <div class="footer-content">
             <div class="footer-info">
                 <h3>REBELLE | B.M.</h3>
-                <p>Singer • Songwriter • Studio Assistant • Session Singer</p>
-                <p>info.rebellemusic@gmail.com | (626) 628-6024</p>
+                <p>Singer • Songwriter • Performer • B.M.</p>
+                <p>info.rebellemusic@gmail.com</p>
+                <p>(626) 628-6024</p>
                 <p>Based in Los Angeles, CA</p>
             </div>
             <div class="footer-social">
