--- a/press.html
+++ b/press.html
@@ -19,7 +19,6 @@
                 <a href="about.html" class="nav-link">About</a>
                 <a href="music.html" class="nav-link">Music</a>
                 <a href="merch.html" class="nav-link">Merch</a>
-                <a href="contact.html" class="nav-link">Contact</a>
                 <a href="press.html" class="nav-link active">Press</a>
             </div>
             <div class="nav-toggle" id="nav-toggle">
@@ -54,14 +53,32 @@
                 </div>
             </div>
         </section>
+        <section>
+                <div class="contact-social">
+                    <h2>Connect With Me</h2>
+                    <div class="social-icons-large">
+                        <a href="https://www.facebook.com/profile.php?id=100079553966899" target="_blank"><i class="fab fa-facebook"></i></a>
+                        <a href="https://www.instagram.com/rebelle_official_" target="_blank"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/in/rebecca-posavec" target="_blank"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://www.youtube.com/@Rebelle_official" target="_blank"><i class="fab fa-youtube"></i></a>
+                        <a href="https://www.tiktok.com/@rebelleofficial_" target="_blank"><i class="fab fa-tiktok"></i></a>
+                        <a href="https://thesocialcat.com/profile/rebellemusic" target="_blank"><i class="fas fa-cat"></i></a>
+                        <a href="https://api.soundsplore.com/app/1598/artist/1255" target="_blank"><i class="fas fa-music"></i></a>
+                        <a href="https://music.apple.com/us/artist/rebelle/1700253905" target="_blank"><i class="fab fa-apple"></i></a>
+                        <a href="https://open.spotify.com/artist/0zd05cxkyyEojQXvV1JFEA?si=Rptf9IfcQvmnMei1TCHs5Q" target="_blank"><i class="fab fa-spotify"></i></a>
+                        <a href="https://linktr.ee/rebelle_music" target="_blank"><i class="fas fa-link"></i></a>
+                    </div>
+                </div>
+        </section>
     </main>
 
     <footer class="footer">
         <div class="footer-content">
             <div class="footer-info">
                 <h3>REBELLE | B.M.</h3>
-                <p>Singer • Songwriter • Studio Assistant • Session Singer</p>
-                <p>info.rebellemusic@gmail.com | (626) 628-6024</p>
+                <p>Singer • Songwriter • Performer • B.M.</p>
+                <p>info.rebellemusic@gmail.com</p>
+                <p>(626) 628-6024</p>
                 <p>Based in Los Angeles, CA</p>
             </div>
             <div class="footer-social">
