--- a/index.html
+++ b/index.html
@@ -83,6 +83,23 @@
                         </div>
                     </div>
                 </div>
+                <div class="bts-gallery">
+                    <h2>Behind the Scenes</h2>
+                    <div class="gallery-grid">
+                        <div class="gallery-item">
+                            <img src="assets/bts.jpeg" alt="Behind the scenes 1">
+                        </div>
+                        <div class="gallery-item">
+                            <img src="assets/bts1.jpeg" alt="Behind the scenes 2">
+                        </div>
+                        <div class="gallery-item">
+                            <img src="assets/bts2.jpeg" alt="Behind the scenes 3">
+                        </div>
+                        <div class="gallery-item">
+                            <img src="assets/bts3.jpeg" alt="Behind the scenes 4">
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
